--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
 	<img src="profile1.jpg" width="300" height="300" class="attributes" alt="Profile"/>
 
 	<div id="text">
-	<p>I am a second year student at Tufts University studying graphic design and computer science, aspiring to make the two majors converge at work. I have been studying art privately for the past twelve years, and I have exhibited my artwork multiple times. A sample of my work is available at the following URL: http://cargocollective.com/widebrownsea</p>
+	<p>I am a second year student at Tufts University studying graphic design and computer science, aspiring to make the two majors converge at work. I have been studying art privately for the past twelve years, and I have exhibited my artwork multiple times. A sample of my work is available at my portfolio website, <a href="http://cargocollective.com/widebrownsea">Wide Brown Sea</a>.</p>
 	</div>
 
 	<div id="returntext">	
